--- a/src/main/resources/com/acunetix/plugin/Messages.properties
+++ b/src/main/resources/com/acunetix/plugin/Messages.properties
@@ -4,6 +4,4 @@ NCScanBuilder.DescriptorImpl.errors.missingApiToken=The parameter 'API Token' mu
 NCScanBuilder.DescriptorImpl.errors.invalidScanType=The parameter 'Scan Type' is invalid.
 NCScanBuilder.DescriptorImpl.errors.invalidWebsiteId=The parameter 'Website URL' is invalid.
 NCScanBuilder.DescriptorImpl.errors.invalidProfileId=The parameter 'Profile Name' is invalid.
-
-
-HelloWorldBuilder.DescriptorImpl.DisplayName=Acunetix 360 Scan
+NCScanBuilder.DescriptorImpl.DisplayName=Acunetix 360 Scan
